--- a/.env
+++ b/.env
@@ -18,3 +18,13 @@
 APP_ENV=dev
 APP_SECRET=d465648299a09fac684ba98810a95c98
 ###< symfony/framework-bundle ###
+
+###> doctrine/doctrine-bundle ###
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
+#
+#DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
+# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
+DATABASE_URL="mysql://root:%23Lucas10122003@127.0.0.1:3306/challenge_ze?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
+#DATABASE_URL="mysql://mysql:%23Lucas10122003@127.0.0.1:5432/mysql?serverVersion=8&=utf8"
+###< doctrine/doctrine-bundle ###
