feat: add entity, migrations and doctrine modeling in xml

--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=d465648299a09fac684ba98810a95c98
+APP_SECRET=
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
@@ -25,6 +25,5 @@ APP_SECRET=d465648299a09fac684ba98810a95c98
 #
 #DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
-DATABASE_URL="mysql://root:%23Lucas10122003@127.0.0.1:3306/challenge_ze?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
-#DATABASE_URL="mysql://mysql:%23Lucas10122003@127.0.0.1:5432/mysql?serverVersion=8&=utf8"
+#DATABASE_URL="mysql://app:!ChangeMe@127.0.0.1:3306/app?serverVersion=10.24.1&charset=utf8mb4"
 ###< doctrine/doctrine-bundle ###
