--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -2,11 +2,8 @@ doctrine:
     dbal:
         url: '%env(resolve:DATABASE_URL)%'
         types:
-            geometry: CrEOF\Spatial\DBAL\Types\GeometryType
             point: CrEOF\Spatial\DBAL\Types\Geometry\PointType
-            polygon: CrEOF\Spatial\DBAL\Types\Geometry\PolygonType
-            linestring: CrEOF\Spatial\DBAL\Types\Geometry\LineStringType
-            geometry_multipolygon: CrEOF\Spatial\DBAL\Types\Geometry\MultiPolygonType
+            multipolygon: CrEOF\Spatial\DBAL\Types\Geometry\MultiPolygonType
 
         # IMPORTANT: You MUST configure your server version,
         # either here or in the DATABASE_URL env var (see .env file)
