fix: resolve directory structure

--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -23,7 +23,7 @@ doctrine:
                 type: xml
                 is_bundle: false
                 dir: '%kernel.project_dir%/config/infrastructure/persistence/doctrine'
-                prefix: 'App\Entity'
+                prefix: 'App\Domain\Entity'
                 alias: App
         dql:
             numeric_functions:
