--- a/composer.json
+++ b/composer.json
@@ -68,6 +68,10 @@
         }
     },
     "require-dev": {
-        "symfony/maker-bundle": "^1.58"
+        "phpunit/phpunit": "^9.5",
+        "symfony/browser-kit": "6.4.*",
+        "symfony/css-selector": "6.4.*",
+        "symfony/maker-bundle": "^1.58",
+        "symfony/phpunit-bridge": "^7.0"
     }
 }
