--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -26,6 +26,7 @@ doctrine:
                 st_area: CrEOF\Spatial\ORM\Query\AST\Functions\Standard\StArea
             string_functions:
                 st_envelope: CrEOF\Spatial\ORM\Query\AST\Functions\Standard\STEnvelope
+                st_astext: CrEOF\Spatial\ORM\Query\AST\Functions\Standard\STAsText
                 sp_asgeojson: CrEOF\Spatial\ORM\Query\AST\Functions\Postgresql\SpAsGeoJson
                 myDQLFunctionAlias: CrEOF\Spatial\ORM\Query\AST\Functions\Standard\StCentroid
 
